examples/ingress-resources/startup-probe/startup-probe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: always-200-ingress
  annotations:
    nginx.org/server-snippets: |
      listen 9999;
      return 200 'ok';
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummy-service
                port:
                  number: 80
      host: example.com
